--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,50 +4,64 @@ description = 'react-native-aliyun-push'
 
 buildscript {
     repositories {
+        google()
         jcenter()
+        maven {
+            url 'https://maven.aliyun.com/repository/public/'
+        }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-        classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.google.gms:google-services:4.3.3'
     }
 }
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 29
+    // buildToolsVersion '28.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
     }
 }
 
 repositories {
+    google()
     jcenter()
+    maven {
+        url 'https://maven.aliyun.com/repository/public/'
+    }
 }
 
 dependencies {
 
     implementation 'com.facebook.react:react-native:+'
 
-    api 'com.aliyun.ams:alicloud-android-push:3.1.6'
-    api 'com.aliyun.ams:alicloud-android-utils:1.1.3'
-    api 'com.aliyun.ams:alicloud-android-beacon:1.0.2'
-    api 'com.aliyun.ams:alicloud-android-utdid:1.5.2'
-    api 'com.aliyun.ams:alicloud-android-ut:5.4.0'
-    api 'com.aliyun.ams:alicloud-android-third-push:3.1.0'
+    api 'com.aliyun.ams:alicloud-android-push:3.2.3'
+    api 'com.aliyun.ams:alicloud-android-utils:1.1.6.4'
+    api 'com.aliyun.ams:alicloud-android-beacon:1.0.4.3'
+    api 'com.aliyun.ams:alicloud-android-utdid:2.5.1-proguard'
+    api 'com.aliyun.ams:alicloud-android-ut:5.4.4'
+    api 'com.aliyun.ams:alicloud-android-third-push:3.2.3'
 
     // huawei
-    api 'com.google.firebase:firebase-messaging:17.6.0'
-    api 'com.aliyun.ams:huawei-push:2.6.3.305'
-    api 'com.aliyun.ams:huawei-push-base:2.6.3.305'
+    api 'com.google.firebase:firebase-messaging:21.0.1'
+    // api 'com.aliyun.ams:huawei-push:2.6.3.305'
+    // api 'com.aliyun.ams:huawei-push-base:2.6.3.305'
+    // api 'com.aliyun.ams:alicloud-android-thrid-push-huawei:3.2.4' // 華為
+    // api 'com.aliyun.ams:alicloud-android-third-push-xiaomi:3.2.4' // 小米
+    // api 'com.aliyun.ams:alicloud-android-third-push-oppo:3.2.4' // Oppo
+    // api 'com.aliyun.ams:alicloud-android-third-push-vivo:3.2.4' // vivo
+    // api 'com.aliyun.ams:alicloud-android-third-push-meizu:3.2.4' // 魅族
+    // api 'com.aliyun.ams:alicloud-android-third-push-fcm:3.2.4' // GCM
 
     // meizu
-    api 'com.aliyun.ams:meizu-push:3.8.7.1'
+    // api 'com.aliyun.ams:meizu-push:3.8.7.1'
 
     // vivo
-    api 'com.aliyun.ams:third_vivopush:2.9.0.1'
+    // api 'com.aliyun.ams:third_vivopush:2.9.0.1'
 
     // shortcutBadger
     api 'me.leolin:ShortcutBadger:1.1.22@aar'
